# serializer version: 1
# name: test_all_entities[humidifier.climate0_dehumidifier-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <HumidifierEntityCapabilityAttribute.AVAILABLE_MODES: 'available_modes'>: list([
        'normal',
        'auto',
      ]),
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 90,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 10,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'humidifier',
    'entity_category': None,
    'entity_id': 'humidifier.climate0_dehumidifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Dehumidifier',
    'options': dict({
    }),
    'original_device_class': <HumidifierDeviceClass.DEHUMIDIFIER: 'dehumidifier'>,
    'original_icon': None,
    'original_name': 'Dehumidifier',
    'platform': 'comelit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <HumidifierEntityFeature: 1>,
    'translation_key': 'dehumidifier',
    'unique_id': 'serial_bridge_config_entry_id-0-dehumidifier',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[humidifier.climate0_dehumidifier-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <HumidifierEntityStateAttribute.ACTION: 'action'>: <HumidifierAction.OFF: 'off'>,
      <HumidifierEntityCapabilityAttribute.AVAILABLE_MODES: 'available_modes'>: list([
        'normal',
        'auto',
      ]),
      <HumidifierEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 65.0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'dehumidifier',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Climate0 Dehumidifier',
      <HumidifierEntityStateAttribute.HUMIDITY: 'humidity'>: 50.0,
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 90,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 10,
      <HumidifierEntityStateAttribute.MODE: 'mode'>: 'normal',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <HumidifierEntityFeature: 1>,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.climate0_dehumidifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[humidifier.climate0_humidifier-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <HumidifierEntityCapabilityAttribute.AVAILABLE_MODES: 'available_modes'>: list([
        'normal',
        'auto',
      ]),
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 90,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 10,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'humidifier',
    'entity_category': None,
    'entity_id': 'humidifier.climate0_humidifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Humidifier',
    'options': dict({
    }),
    'original_device_class': <HumidifierDeviceClass.HUMIDIFIER: 'humidifier'>,
    'original_icon': None,
    'original_name': 'Humidifier',
    'platform': 'comelit',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <HumidifierEntityFeature: 1>,
    'translation_key': 'humidifier',
    'unique_id': 'serial_bridge_config_entry_id-0-humidifier',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[humidifier.climate0_humidifier-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <HumidifierEntityStateAttribute.ACTION: 'action'>: <HumidifierAction.IDLE: 'idle'>,
      <HumidifierEntityCapabilityAttribute.AVAILABLE_MODES: 'available_modes'>: list([
        'normal',
        'auto',
      ]),
      <HumidifierEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 65.0,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidifier',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Climate0 Humidifier',
      <HumidifierEntityStateAttribute.HUMIDITY: 'humidity'>: 50.0,
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 90,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 10,
      <HumidifierEntityStateAttribute.MODE: 'mode'>: 'normal',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <HumidifierEntityFeature: 1>,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.climate0_humidifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
